# glbbackend

./: .gitignore  GLBCollection.cc  GLBCollection.hh  GLBCommandServer.cc  GLBCommandServer.hh  GlbContainer.cc  GlbContainer.hh  IPRecord.cc  IPRecord.hh  LICENSE  Makefile  Makefile.am  Makefile.in  OBJECTFILES  OBJECTLIBS  README.md  SOAContainer.cc  SOAContainer.hh  ServerJsonBuilder.cc  ServerJsonBuilder.hh  ServerSingleton.cc  ServerSingleton.hh  StartUpClient.cc  StartUpClient.hh  boosttests.cc  build_tests.sh  build_u1204.md  glbbackend.cc  glbbackend.hh  server.cc  server.hh  server_main.cc  test_client.py  u1204.patch
contrib/experiments/cpp/maindemo/: .gitignore  BitArray.cpp  BoostTests.cpp  DemoUtils.cpp  DemoUtils.h  Makefile  Matrix.cpp  Matrix.h  Point.cpp  Point.h  ThreadManager.cpp  ThreadManager.h  main.cpp  ring_buffer.cpp  ring_buffer.h
contrib/experiments/cpp/mutex/: .gitignore  Makefile  mutex.cpp  mutex.h
contrib/experiments/cpp/server_client/: .gitignore  BitArray.h  GlbContainer.cc  GlbContainer.cpp  GlbContainer.h  GlbContainer.hh  GlbStaticLoader.cpp  GlbStaticLoader.h  IPRecord.cc  IPRecord.cpp  IPRecord.h  IPRecord.hh  Makefile  boosttests.cc  boosttests.cpp  client.c  client.cc  lookup.cc  lookup.cpp  lookup.h  ring_buffer.cpp  ring_buffer.h  server.cc  server.cpp  server.h  server.hh  test.txt  test_client.py
contrib/experiments/cpp/stdin_loop/: .gitignore  Makefile  main.cpp
contrib/experiments/cpp/unordered_map/: .gitignore  Makefile  main.cpp
contrib/experiments/cpp/unsorted_map/: Makefile
(+10 files in other folders)
